<resources>
    <string name="app_name">Event Management</string>
    <string name="event_management_app">Event Management App</string>
    <string name="welcome_back">Welcome Back \uD83D\uDC4B</string>
    <string name="login">LOGIN</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="manage_your_events_easily">Manage your events easily</string>
    <string name="login_to_continue_to_your_events">Login to continue to your events</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_an_account_to_start_managing_your_events">Create an account to start managing your events</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="enter_your_registered_email_address">Enter your registered email address and we\'ll send you a link to reset your password.</string>
    <string name="back_to_login">← Back to Login</string>
    <string name="send_reset_link">SEND RESET Link</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="add_event">Add Event</string>
    <string name="logout">Logout</string>
    <string name="my_events">My Events</string>
    <string name="overview">Overview</string>
    <string name="total">Total</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="default_value">0</string>
    <string name="event_title">Event Title *</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="location">Location</string>
    <string name="create_event">CREATE EVENT</string>
    <string name="add_the_details_of_your_event_below">Add the details of your event below</string>
    <string name="create_a_new_event">Create a new event</string>
    <string name="events_per_month">Events Per Month</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="edit">EDIT</string>
    <string name="delete">DELETE</string>
    <string name="view_all_events">View All</string>
    <string name="search_events">Search events</string>
    <string name="all">All</string>
    <string name="all_events">All Events</string>
</resources>